# pokedex-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo.yml  coverage.yml
src/: adapters.rs  args.rs  log.rs  main.rs  model.rs  web.rs
src/adapters/: pokedex.rs  translation.rs
src/adapters/pokedex/: mock.rs  pokeapi.rs
src/adapters/pokedex/pokeapi/: species.rs
src/adapters/translation/: fun_translations.rs  mock.rs
src/adapters/translation/fun_translations/: response.rs
src/args/: log_level.rs
src/model/: pokemon.rs
src/web/: routes.rs  tests.rs
