[package]
name = "pokedex-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
description = "A RESTful API web service for accessing Pokémon data."
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = []
keywords = ["pokemon", "api", "rest", "web-service"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/pokedex-api"

[dependencies]
anyhow = "1"
argh = "0.1"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"